--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.22.3",
     "workbox-window": "^7.0.0",
