--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.22.3",
+    "react-type-animation": "^3.2.0",
     "workbox-window": "^7.0.0",
     "zod": "^3.23.8"
   },
