--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "firebase": "^10.7.0",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.344.0",
@@ -19,13 +20,16 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.2",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
+    "react-syntax-highlighter": "^15.6.1",
     "react-type-animation": "^3.2.0",
     "workbox-window": "^7.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/workbox-core": "^5.0.0",
